--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,11 +26,11 @@ pipeline {
                 }
             }
         }
-                stage('Static code analysis: Sonarqube'){
+        <!--        stage('Static code analysis: Sonarqube'){
                     steps{
                        script{
                             def SonarQubecredentialsId = 'SONAR'
-                           SonarqubeAnalyses(SonarQubecredentialsId)
+                          SonarqubeAnalyses(SonarQubecredentialsId)
                }
             }
         }
@@ -51,7 +51,6 @@ pipeline {
         }
                stage('Vulnerability Scan - Docker Trivy') {
        steps {
-//--------------------------replace variable  token_github on file trivy-image-scan.sh
          withCredentials([string(credentialsId: 'trivy_github_token', variable: 'TOKEN')]) {
   sh "sed -i 's#token_github#${TOKEN}#g' trivy-image-scan.sh"      
   sh "sudo bash trivy-image-scan.sh"
@@ -60,3 +59,4 @@ pipeline {
      }
     }
 }
+-->
