--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
                 }
             }
         }
-        <!--        stage('Static code analysis: Sonarqube'){
+        /*      stage('Static code analysis: Sonarqube'){
                     steps{
                        script{
                             def SonarQubecredentialsId = 'SONAR'
@@ -59,4 +59,4 @@ pipeline {
      }
     }
 }
--->
+*/
