--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,1 +1,11 @@
+pipeline {
+  agent any
+  stages {
+    stage('Checkout') {
+      steps {
+        checkout scm
+        sh 'echo "Checkout passed successfully"'
+      }
+
+    }
 
