--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,5 +7,15 @@ pipeline {
         sh 'echo "Checkout passed successfully"'
       }
     }
-}
+ stage('Detect Secrets with GitLeaks') {
+            steps {
+                script {
+                    // Run GitLeaks
+                    sh 'cd /home/abdelilah/smartcity'
+                    sh 'go build -o /usr/local/bin/gitleaks ./gitleaks'
+                    sh 'gitleaks'
+                }
+            }
+        }
+  }
 }
