--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,9 +10,12 @@ pipeline {
  stage('Detect Secrets with GitLeaks') {
             steps {
                 script {
- sh 'git clone https://github.com/zricethezav/gitleaks.git'
-                    sh 'cd gitleaks && go build && sudo mv gitleaks /usr/local/bin/'
-                    sh 'gitleaks --repo=https://github.com/example/repository.git'
+ 
+                    // Disable Go modules
+                    sh 'export GO111MODULE=off'
+
+                    // Run GitLeaks
+                    sh 'go build -o /usr/local/bin/gitleaks ./gitleaks && gitleaks'
                 }
             }
         }
