--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,14 +11,15 @@ pipeline {
             steps {
                 script {
  
-                    // Disable Go modules
+                         // Disable Go modules
                     sh 'export GO111MODULE=off'
 
                     // Initialize Go module with a placeholder path
                     sh 'go mod init example.com/smartcity'
 
-                    // Run GitLeaks
-                    sh 'go build -o /usr/local/bin/gitleaks ./gitleaks && gitleaks'
+                    // Run GitLeaks within the project directory
+                    dir("${WORKSPACE}") {
+                        sh 'go build -o /usr/local/bin/gitleaks ./gitleaks && /usr/local/bin/gitleaks'
                 }
             }
         }
