--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
 
    sh 'git clone https://github.com/zricethezav/gitleaks.git'
                     sh 'cd gitleaks && go build && sudo mv gitleaks /usr/local/bin/'
-                    sh 'gitleaks --repo=https://github.com/example/repository.git'
+                    sh 'gitleaks --repo=https://github.com/abdelilah-rbaiti/smartcity.git'
                 }
             }
         }
