--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
                 script {
 
    sh 'git clone https://github.com/zricethezav/gitleaks.git'
-                    sh 'cd gitleaks && go build && sudo mv gitleaks /usr/local/bin/'
+                    sh 'cd gitleaks && go build && sudo -S mv gitleaks /usr/local/bin/'
                     sh 'gitleaks --repo=https://github.com/abdelilah-rbaiti/smartcity.git'
                 }
             }
